k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance-nginx
spec:
  selector:
    matchLabels:
      run: maintenance-nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: maintenance-nginx
    spec:
      containers:
        - image: morskoi/geeksocks:0.0.2
          name: maintenance-nginx
          ports:
          - containerPort: 80
