k8s/deployment_mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geeksocks-mail
spec:
  selector:
    matchLabels:
      run: geeksocks-mail
  replicas: 1
  template:
    metadata:
      labels:
        run: geeksocks-mail
    spec:
      containers:
        - image: morskoi/geeksocks-mail:0.0.8
          imagePullPolicy: Always
          name: geeksocks-mail
