k8s/deployment_mail_producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geeksocks-mail-producer
spec:
  selector:
    matchLabels:
      run: geeksocks-mail-producer
  replicas: 1
  template:
    metadata:
      labels:
        run: geeksocks-mail-producer
    spec:
      containers:
        - image: morskoi/geeksocks-mail-producer:0.0.2
          imagePullPolicy: Always
          name: geeksocks-mail-producer
          volumeMounts:
          - name: certs
            mountPath: "/app/certs/"
            readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: redis-client-certificate
          optional: false # default setting; "mysecret" must exist
