k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-nginx
  labels:
    run: maintenance-nginx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
  selector:
    run: maintenance-nginx
