k8s/service_mail.yaml
apiVersion: v1
kind: Service
metadata:
  name: geeksocks-mail
  labels:
    run: geeksocks-mail
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    run: geeksocks-mail
