k8s/service_website.yaml
apiVersion: v1
kind: Service
metadata:
  name: geeksocks-nginx-clusterip
  labels:
    run: geeksocks-nginx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: geeksocks-nginx
