k8s/ingress_mail.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  cert-manager.io/issuer: letsencrypt-staging
  name: geeksocks-mail-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-production
#    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
#  ingressClassName: nginx-example
spec:  
  tls:
  - hosts:
    - mail.geeksocks.ru
    secretName: web-tls-mail
  rules:
  - host: mail.geeksocks.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geeksocks-mail
            port: 
              number: 80
